2005-10-25  Per Abrahamsen  <abraham@dina.kvl.dk>

	* horizon_numeric.C, horizon_system.C: (normalize): New parameter.

2005-10-20  Per Abrahamsen  <abraham@dina.kvl.dk>

	* treelog.C, treelog.h (sequence_id): New global function.

	* boolean.C, boolean.h: New component.
	* stringer.h, stringer.C: New component.
	* Makefile (COMPONENTS): Added them.

2005-10-19  Per Abrahamsen  <abraham@dina.kvl.dk>

	* submodeler.h: New utility.

2005-10-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/log-std.dai (column): New base parameterization.
	("Field water", "Soil water", "Field nitrogen", "Soil nitrogen"):
	Use it.

	* librarian, select, log: Support lexical scope.
	
2005-10-16  Per Abrahamsen  <abraham@dina.kvl.dk>

	* block.C: New utility.
	* Makefile (OTHER): Added it.

	* syntax.C, syntax.h (category_names, category_name, category_number)
	(type_names, type_name, type_number): Use 'std::string'
	instead of 'char*'.

	* soil.C (initialize): Fixed comparison of signed and unsigned.

2005-10-14  Per Abrahamsen  <abraham@dina.kvl.dk>

	* horizon.C (initialize): Fixed comparison of signed and unsigned.
	* syntax.C (total_order): Ditto.
	* library.C (all_count): Ditto.

	* library.h, library.C, librarian.h, librarian.C, 
	* alist.h, alist.C: Removed 'const char* key' variants.

2005-10-13  Per Abrahamsen  <abraham@dina.kvl.dk>

	* hydraulic_M_BaC.C (h_b): Added check.

	* parser_file.C (load_derived): Spelling error.

2005-10-12  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/fertilizer.dai: Added dimensions.

2005-10-05  Per Abrahamsen  <abraham@dina.kvl.dk>

	* condition_time.C (timestep): New condition.

	* units.C (standard_conversions): [none] -> [].

2005-10-04  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lexer.C (get): Support DOS files under Unix.

2005-09-30  Per Abrahamsen  <abraham@dina.kvl.dk>

	* timestep.h, memutils.h: New utility headers.
	* Makefile (HEADERS): added
	(OTHER): Removed 'common.C'.

2005-09-29  Per Abrahamsen  <abraham@dina.kvl.dk>
